hphp/hack/test/typecheck/await_in_expressions6.php.exp
ERROR: File "await_in_expressions6.php", line 5, characters 12-19:
Cannot use unstable feature: `allow_conditional_await_syntax` (Parsing[1002])
