hphp/hack/test/typecheck/await_in_expressions6.php
<?hh

async function f1(Awaitable<bool> $a): Awaitable<void> {
  do {
  } while (await $a);
}
